--- a/app/views/students/activities.html.erb
+++ b/app/views/students/activities.html.erb
@@ -100,11 +100,12 @@
               <div class="activity-stats">
                 <div class="stat">
                   <i class="bi bi-question-circle"></i>
-                  <span><%= activity.questions.count %> questions</span>
+                  <% total_exercises = activity.questions.count + activity.fill_blanks.count + activity.sentence_orderings.count + activity.paragraph_orderings.count %>
+                  <span><%= total_exercises %> questions</span>
                 </div>
                 <div class="stat">
                   <i class="bi bi-clock"></i>
-                  <span>~<%= [5, activity.questions.count * 2].max %> min</span>
+                  <span>~<%= [5, total_exercises * 2].max %> min</span>
                 </div>
               </div>
             </div>
